# blueprint

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: drawio-generation-rules.md  implementation-plan.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  DiagramSkeleton.tsx  api.ts  auth.ts  main.tsx  styles.ts  vite-env.d.ts
infra/: cleanup-old.sh  deploy-frontend.sh  deploy.sh  storage.yaml
infra/cfn/: api.yaml  ecr.yaml
infra/config/: prd.env.example  stg.env.example
infra/lambda/: Dockerfile  handler.py
src/: agent.py
src/prompts/: spec_system_prompt.py
src/renderer/: emitter.py  icons.py  layout.py  schema.py
src/tools/: load_diagram.py  render_drawio.py  save_diagram.py  validate_xml.py
tests/: test_validate_xml.py
